# docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:8080",
     "basePath": "/api/v1/",
     "paths": {
-        "/download": {
+        "/shortener": {
             "post": {
                 "description": "test",
                 "consumes": [
@@ -25,7 +25,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.URL"
+                            "$ref": "#/definitions/models.URL"
                         }
                     }
                 ],
@@ -39,7 +39,7 @@
                 }
             }
         },
-        "/download/{name}": {
+        "/shortener/{path}": {
             "get": {
                 "description": "test",
                 "consumes": [
@@ -51,8 +51,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "name",
-                        "name": "name",
+                        "description": "path",
+                        "name": "path",
                         "in": "path",
                         "required": true
                     }
@@ -69,9 +69,12 @@
         }
     },
     "definitions": {
-        "main.URL": {
+        "models.URL": {
             "type": "object",
             "properties": {
+                "path": {
+                    "type": "string"
+                },
                 "url": {
                     "type": "string"
                 }
